--- a/src/components/Landing/landing.scss
+++ b/src/components/Landing/landing.scss
@@ -39,9 +39,10 @@
     }
 
     p {
-      width: 55%;
+      width: 50%;
+      margin-top: 0.5rem;
       text-align: center;
-      margin: 0 auto;
+      margin: 0.5rem auto;
       margin-bottom: 2rem;
       font-size: 14px;
     }
