--- a/src/components/Courses/courses.scss
+++ b/src/components/Courses/courses.scss
@@ -36,3 +36,15 @@
     }
   }
 }
+
+@media screen and (max-width: 431px) {
+  .main-heading {
+    h2 {
+      font-size: 1.5rem !important;
+    }
+  
+    p {
+      font-size: 12px !important;
+    }
+  }
+}
