--- a/src/components/Enroll/enroll.scss
+++ b/src/components/Enroll/enroll.scss
@@ -49,5 +49,26 @@
     a {
       @include hero-btn;
     }
+
+    @media screen and (max-width: 1538px){
+      h2 {
+        width: 70%;
+        font-size: 2rem;
+      }
+    }
+
+    @media screen and (max-width: 1167px){
+      h2 {
+        width: 80%;
+        font-size: 1.5rem;
+      }
+    }
+
+    @media screen and (max-width: 687px){
+      h2 {
+        width: 100%;
+        font-size: 1rem;
+      }
+    }
   }
 }
