--- a/src/components/PagesBackground/pagesBackground.scss
+++ b/src/components/PagesBackground/pagesBackground.scss
@@ -23,6 +23,11 @@
 
     h2 {
       color: white;
+      text-align: center;
+      
+      @media screen and (max-width: 869px) {
+        font-size: 1.25rem;
+      }
     }
   }
 }
