--- a/src/components/Landing/landing.scss
+++ b/src/components/Landing/landing.scss
@@ -22,6 +22,14 @@
     z-index: -1;
   }
 
+  .landing-content.hidden {
+    transform: scale(0);
+  }
+
+  .landing-content.show {
+    transform: scale(1);
+  }
+
   .landing-content {
     display: flex;
     flex-direction: column;
