--- a/src/components/BlogContent/blogContent.scss
+++ b/src/components/BlogContent/blogContent.scss
@@ -1,4 +1,5 @@
 @use '../../index.scss' as *;
+
 .blog-container {
   @include section;
   margin-top: 4.5rem;
@@ -20,7 +21,11 @@
       flex-basis: 61.5%;
       .info-img {
         &.hidden {
-          transform: translateX(0);
+          transform: scale(0);
+        }
+
+        &.show {
+          transform: scale(1);
         }
         img {
           width: 100%;
