--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -22,7 +22,7 @@ header {
     }
   
     @media screen and (min-width: 768px) {
-      .menu-bar {
+      .menu-bar, .exit {
         display: none !important;
       }
     }
@@ -77,7 +77,7 @@ header {
         
           a {
             position: relative;
-            font-size: 0.9rem;
+            font-size: 1rem;
             text-transform: uppercase;
           
             &::before {
