--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,7 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 li {
@@ -37,20 +38,6 @@ li {
 a {
   text-decoration: none;
   color: white;
-}
-
-.testimonials-card.hidden,
-.info-img.hidden,
-.landing-content.hidden,
-.courses-card.hidden {
-  transform: scale(0);
-}
-
-.testimonials-card.show,
-.info-img.show,
-.landing-content.show,
-.courses-card.show {
-  transform: scale(1);
 }
 
 .main-heading {
@@ -68,20 +55,6 @@ a {
     font-weight: 300;
     font-size: 14px;
   }
-}
-
-//! Intersection Observer
-.hidden {
-  opacity: 0;
-  transition: $transitionDurationO;
-  filter: blur(5px);
-  transform: translateX(-100%);
-}
-
-.show {
-  opacity: 1;
-  filter: blur(0);
-  transform: translateX(0%);
 }
 
 //! Mixins
